docker/lab-19-project-deploy-k8s/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
