docker/lab-19-project-deploy-k8s/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: todo-app
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
