docker/lab-19-project-deploy-k8s/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: todo-app
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
